Fixed overflow for non-go code blocks.

--- a/static/css/gotohugo.css
+++ b/static/css/gotohugo.css
@@ -8,7 +8,8 @@
 
 tt, code, pre, kbd, samp {
     font-family: Menlo, Monaco, Consolas, "Lucida Console", monospace;
-	font-size: .85rem
+	font-size: .85rem;
+	overflow: auto;
 }
 
 
